--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  cupertino_icons: ^0.1.3
+  email_validator: '^1.0.0'
+  cnpj_cpf_helper: ^1.0.8
+  dio:
+  cnpj_cpf_formatter: ^1.0.8
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
+ 
 
 dev_dependencies:
   flutter_test:
