--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
   cnpj_cpf_helper: ^1.0.8
   dio:
   cnpj_cpf_formatter: ^1.0.8
+  sqflite: ^1.3.1
+  path: ^1.6.4
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
